# HH-DataLoader

./: main.py  pyproject.toml
api/: hh_api.py
config/: employers.py
db/: db_manager.py  init_db.py
utils/: user_interface.py
