[tool.poetry]
name = "hh-dataloader"
version = "0.1.0"
description = ""
authors = ["Said Magomedov <saidmagomedov037@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
